# zeroapp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  configure.ac  configzeroapp.h.in  do-clone  do-clone-tar  do_clone  readme_git
apputil/: AppSysSet.cpp  AppSysSet.h  eventball.h  eventballfltk.cpp  eventballfltk.h  eventballglut.cpp  eventballglut.h  serializer.cpp  serializer.h  signals.h
gui/: .gitignore  AUTHORS  ImageTile.h  Makefile.am  Makefile.in  TODO  configure  configure.ac  datastruct.h  dispview.cpp  dispview.h  editviewobj.h  eventhnd.cpp  eventhnd.h  eventlog.cpp  fltk_defs.h  frmImagePlane.cpp  frmImagePlaneUI.cxx  frmMainDisplay.cpp  frmMainDisplayUI.fl  frmMainDisplayUI.h  frmMatting.cpp  frmMatting.h  frmMattingUI.cxx  frmMattingUI.fl  frmMattingUI.h  frmPrjTree.cpp  frmPrjTree.h  frmPrjTreeUI.h  frmSurfCtrl.cpp  frmSurfCtrl.h  frmSurfCtrlUI.cxx  frmViewCtrl.cpp  frmViewCtrl.h  frmViewCtrlUI.fl  frmViewCtrlUI.h  glhelper.cpp  imageplane.cpp  imageplane.h  ims00.ppm  (+16 more)
mathlib/lapackcpp/: Makefile.am  Makefile.in  configure  configure.ac  eigenval.cpp  invert.cpp  lapackcpp.h  leastsquare.cpp  makefile.libtool  svald.cpp
mathlib/lapackcpp/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
mathlib/lineqsolver/: Makefile.am  autosolvlineq  configure  configure.ac  linsolver_cpp.h  solv_lineq.cpp  solv_lineq.pro
mathlib/lineqsolver/autom4te.cache/: output.1  traces.0  traces.1
mathlib/mathutl/: fftutl.h  imageandfft.h  matchalg.h  meshandalg.h  mymath.h  raster3d.h  surfbynorm.h
mathlib/matpro/: Makefile.am  README  configure.ac  makefile.libtool  makefile.plain  matpro.dsp  matpro.vcproj  matrix.cpp  matrix.h  smooth_matrix.cpp  smooth_matrix.h  smooth_pro_scal.cpp  smooth_pro_scal.h  smooth_vect.cpp  smooth_vect.h
src/: CMakeLists.txt  ImageTile.cpp  ImageTile.h  LoadImageToVec.h  Makefile.am  dispview.cpp  dispview.h  editviewobj.cpp  eventhnd.cpp  eventlog.h  fltk_animator.h  fltk_calllist.cpp  fltk_calllist.h  fltk_defs.h  frmImagePlane.cpp  frmImagePlane.h  frmImagePlaneUI.fl  frmImagePlaneUI.h  frmMainDisplay.cpp  frmMainDisplay.h  frmMainDisplayUI.cxx  frmMainDisplayUI.fl  frmMatting.cpp  frmMattingUI.fl  frmPrjTree.cpp  frmPrjTree.h  frmPrjTreeUI.cxx  frmPrjTreeUI.fl  frmPrjTreeUI2.fl  frmSurfCtrl.cpp  frmSurfCtrlUI.fl  frmSurfCtrlUI.h  frmViewCtrl.cpp  frmViewCtrlUI.cxx  glhelper.cpp  glhelper.h  imageplane.cpp  imageplane.h  index.html  jaw.srf  (+25 more)
