lib_LTLIBRARIES = liblapackcpp.la

#include_HEADERS = DATA_3D/Data3D.h

liblapackcpp_la_SOURCES = eigenval.cpp  leastsquare.cpp  svald.cpp invert.cpp lapackcpp.h 

#liblapackcpp_la_DEPENDENCIES = DATA_3D/Array3D.cpp

#libdata3d_la_LIBADD = 
#libdata3d_la_CPPFLAGS = -Iinclude

#libdata3d_la_LDFLAGS = -L/usr/X11R6/lib64 -L/usr/X11R6/lib -L$(HOME)/lib 

# the next line used for defining list of the libraries it can be written here or
# build in checking process in configure.ac (see lines with macro AC_CHECK_LIB)
 
# libglui_la_LDADD = -lglui -lmatpro -ldata3d -ljpeg -lXmu -lm -lglut  -lGLU -lGL
