lib_LTLIBRARIES = libmatpro.la

#include_HEADERS = DATA_3D/Data3D.h

libmatpro_la_SOURCES = \
matrix.cpp  smooth_matrix.cpp  smooth_vect.cpp \
matrix.h    smooth_matrix.h    smooth_vect.h 

libmatpro_la_DEPENDENCIES = smooth_pro_scal.cpp smooth_pro_scal.h

#libmatpro_la_LIBADD = 
#libmatpro_la_CPPFLAGS = -Iinclude

#libmatpro_la_LDFLAGS = -L/usr/X11R6/lib64 -L/usr/X11R6/lib -L$(HOME)/lib 

# the next line used for defining list of the libraries it can be written here or
# build in checking process in configure.ac (see lines with macro AC_CHECK_LIB)
 
# libglui_la_LDADD = -lglui -lmatpro -lmatpro -ljpeg -lXmu -lm -lglut  -lGLU -lGL
